--- a/styles/index.css
+++ b/styles/index.css
@@ -536,8 +536,14 @@ mens bildene lastes inn i nettleseren.*/
     border: 1px solid #000;
     padding: 3rem 5rem;
 
+
 }
 
+#map {
+    width: 100%;
+    height: 400px;
+    border-radius: 16px;
+}
 
 
 
