Fjernet action i skjema
Fjernet action i skjema som gikk til en epost. La på hover på skjema-knapp.

--- a/styles/index.css
+++ b/styles/index.css
@@ -596,6 +596,10 @@ form {
     border: 2px solid transparent;
 }
 
+.form-button:hover {
+    background-color: #dedede;
+
+}
 
 .input-wrapper {
     position: relative;
